--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,12 +6,25 @@
         xmlns:local="clr-namespace:Autoclicker"
         mc:Ignorable="d"
         Title="Autoclicker"
-        Height="500" Width="650">
+        Height="400" Width="500" ResizeMode="CanMinimize">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="57*"/>
-            <ColumnDefinition Width="593*"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-
+        <GroupBox Header="Click Interval" Margin="10,10,-490,294">
+            <Grid>
+                <TextBox HorizontalAlignment="Left" Margin="112,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="47" TextChanged="TextBox_TextChanged_1"/>
+                <Label Content="hours" HorizontalAlignment="Left" Margin="58,0,0,0" VerticalAlignment="Center" Width="49"/>
+                <TextBox HorizontalAlignment="Left" Margin="10,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="48" TextChanged="TextBox_TextChanged_2"/>
+                <Label Content="minutes" HorizontalAlignment="Left" Margin="159,0,0,0" VerticalAlignment="Center" Width="58"/>
+                <TextBox Width="47" VerticalAlignment="Center" Text="0" TextWrapping="Wrap" TextAlignment="Right" TextChanged="TextBox_TextChanged_3" Margin="222,0,0,0" HorizontalAlignment="Left"/>
+                <Label Width="58" VerticalAlignment="Center" Margin="269,0,0,0" HorizontalAlignment="Left" Content="seconds"/>
+                <TextBox Width="47" VerticalAlignment="Center" Text="0" TextWrapping="Wrap" TextAlignment="Right" TextChanged="TextBox_TextChanged_4" Margin="327,0,0,0" HorizontalAlignment="Left"/>
+                <Label Width="75" VerticalAlignment="Center" Margin="374,0,0,0" HorizontalAlignment="Left" Content="milliseconds"/>
+            </Grid>
+        </GroupBox>
     </Grid>
 </Window>
