--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,15 +7,17 @@
         mc:Ignorable="d"
         Title="Autoclicker"
         Height="400" Width="500" ResizeMode="CanMinimize">
-    <Grid>
+    <Grid Margin="0,0,0,-16">
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <GroupBox Header="Click Interval" Margin="10,10,-490,294">
-            <Grid>
+        <GroupBox Header="Click Interval" Margin="10,10,10,294" Grid.ColumnSpan="2">
+            <Grid HorizontalAlignment="Left" Width="482">
                 <TextBox HorizontalAlignment="Left" Margin="112,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="47" TextChanged="TextBox_TextChanged_1"/>
                 <Label Content="hours" HorizontalAlignment="Left" Margin="58,0,0,0" VerticalAlignment="Center" Width="49"/>
                 <TextBox HorizontalAlignment="Left" Margin="10,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="48" TextChanged="TextBox_TextChanged_2"/>
