--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Autoclicker"
         mc:Ignorable="d"
         Title="Autoclicker"
-        Height="400" Width="500" ResizeMode="CanMinimize">
+        Height="400" Width="500" ResizeMode="CanMinimize"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid Margin="0,0,0,-16">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -18,13 +19,13 @@
         </Grid.ColumnDefinitions>
         <GroupBox Header="Click Interval" Margin="10,10,10,294" Grid.ColumnSpan="2">
             <Grid HorizontalAlignment="Left" Width="482">
-                <TextBox HorizontalAlignment="Left" Margin="112,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="47" TextChanged="TextBox_TextChanged_1"/>
+                <TextBox HorizontalAlignment="Left" Margin="112,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="{Binding Path=HoursValue}" VerticalAlignment="Center" Width="47" TextChanged="TextBox_TextChanged_1"/>
                 <Label Content="hours" HorizontalAlignment="Left" Margin="58,0,0,0" VerticalAlignment="Center" Width="49"/>
-                <TextBox HorizontalAlignment="Left" Margin="10,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="0" VerticalAlignment="Center" Width="48" TextChanged="TextBox_TextChanged_2"/>
+                <TextBox HorizontalAlignment="Left" Margin="10,0,0,0" TextAlignment="Right" TextWrapping="Wrap" Text="{Binding Path=MinutesValue}" VerticalAlignment="Center" Width="48" TextChanged="TextBox_TextChanged_2"/>
                 <Label Content="minutes" HorizontalAlignment="Left" Margin="159,0,0,0" VerticalAlignment="Center" Width="58"/>
-                <TextBox Width="47" VerticalAlignment="Center" Text="0" TextWrapping="Wrap" TextAlignment="Right" TextChanged="TextBox_TextChanged_3" Margin="222,0,0,0" HorizontalAlignment="Left"/>
+                <TextBox Width="47" VerticalAlignment="Center" Text="{Binding Path=SecondsValue}" TextWrapping="Wrap" TextAlignment="Right" TextChanged="TextBox_TextChanged_3" Margin="222,0,0,0" HorizontalAlignment="Left"/>
                 <Label Width="58" VerticalAlignment="Center" Margin="269,0,0,0" HorizontalAlignment="Left" Content="seconds"/>
-                <TextBox Width="47" VerticalAlignment="Center" Text="0" TextWrapping="Wrap" TextAlignment="Right" TextChanged="TextBox_TextChanged_4" Margin="327,0,0,0" HorizontalAlignment="Left"/>
+                <TextBox Width="47" VerticalAlignment="Center" Text="{Binding Path=MillisecondsValue}" TextWrapping="Wrap" TextAlignment="Right" TextChanged="TextBox_TextChanged_4" Margin="327,0,0,0" HorizontalAlignment="Left"/>
                 <Label Width="75" VerticalAlignment="Center" Margin="374,0,0,0" HorizontalAlignment="Left" Content="milliseconds"/>
             </Grid>
         </GroupBox>
